branches/0.6/src/objects/FavoriteWikis__c.object
<CustomObject>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Favorite Wikis</relationshipLabel>
        <relationshipName>FavoriteWikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FavoriteWikis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiPage__c</fullName>
        <label>WikiPage</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Favorite Wikis</relationshipLabel>
        <relationshipName>FavoriteWikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite Wikis</label>
    <nameField>
        <label>FavoriteWikis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Wikis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>